test/e2e/fixtures/host-wildcards/queries-http.json
[
  {
    "url": "/foo/3-301",
    "method": "GET",
    "headers": {
      "Host": "a.domain.com"
    }
  },
  {
    "url": "/foo/4-200",
    "method": "GET",
    "headers": {
      "Host": "wc.domain.com"
    }
  },
  {
    "url": "/foo/5-301",
    "method": "GET",
    "headers": {
      "Host": "127.0.0.1"
    }
  }
]
